--- a/Back-End/.env
+++ b/Back-End/.env
@@ -4,3 +4,7 @@ MONGO=mongodb+srv://siyajifriya23:B2vrvUZULvKn0QqL@cluster0.v6clmm8.mongodb.net/
 PORT=5000
 JWT_SECRET=tgyd78e79284e9gquwrjh9981023uejwbsuiu9
 NODE_ENV=development
+FRONTEND_URL=http://localhost:5173
+
+ADMIN_EMAIL=abcd12@gmail.com
+PASS=345678
