--- a/Back-End/.env
+++ b/Back-End/.env
@@ -6,5 +6,5 @@ JWT_SECRET=tgyd78e79284e9gquwrjh9981023uejwbsuiu9
 NODE_ENV=development
 FRONTEND_URL=http://localhost:5173
 
-ADMIN_EMAIL=abcd12@gmail.com
-PASS=345678
+# ADMIN_EMAIL=abcd12@gmail.com
+# PASS=345678
